--- a/exercises/0.Perceptrons/style.sass
+++ b/exercises/0.Perceptrons/style.sass
@@ -7,15 +7,41 @@ body
     overflow: hidden
 
     main
-        top: 50%
+        top: 30%
         left: 50%
         position: absolute
         transform: translate(-50%, -50%)
+        text-align: center
+
+        &:before
+            content: 'Train me first'
+            color: #666
+            display: block
+            font-size: 16px
+            margin-bottom: 18px
 
         .sample
             width: 100%
-            height: 100px
+            height: 80px
 
         button
             font-size: 20px
             padding: 10px
+
+    section
+        top: 70%
+        left: 50%
+        position: absolute
+        transform: translate(-50%, -50%)
+        font-size: 40px
+        text-align: center
+
+        &:before
+            content: 'Then ask me'
+            color: #666
+            display: block
+            font-size: 16px
+            margin-bottom: 10px
+
+        input
+            height: 40px
